Prevent UnicodeDecodeErrors in ctypes with non-ascii error messages. Fixes issue #4429.

Reviewed by Amaury Forgeot d'Arc.